added footer for desktop

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sam's Burger</title>
 	</head>
